0.83.5
  - Added config option "startinfo" in [dosbox] section
    to disable or enable the startup message box when
    DOSBox-X runs. (Wengier)
  - Added config option "ega per scanline hpel" in
    [dosbox] section to control whether EGA emulation
    latches hpel at display start (as VGA emulation
    does) or allows hpel to change per scanline.
    Setting the option to false is needed for some
    games like Commander Keen.
  - Allowed Sound Blaster to be enabled by the games
    "Desert Strike" and "Jungle Strike". (Wengier)
  - DOSBox-X will now search for system fonts if the
    fonts required for the printing feature cannot be
    found in the FONTS directory. (Wengier)
  - Added menu item "Send Feed-form" under the DOS menu
    for manually ejecting new pages to print. (Wengier)
  - Support for mounting CD images with a sector size
    of 2448, used by for example the MDF image of the
    game Grand Theft Auto. (Wengier)
  - Sound Blaster Pro emulation now maps DSP commands
    0x41 to 0x47 as aliases of 0x40 (set time constant)
    to support broken demoscene code that uses 0x41
    in that way. Yes, such code would obviously break
    on clone cards and the SB16. Added a config option
    "dsp command aliases" in [sblaster] section to turn
    it off for debugging. Alias is documented on Vogons
    forums where someone made a SB Pro clone card.
  - Fixed the issue with CD audio play by porting the
    audio code from DOSBox ECE. (Wengier)
  - COPY command now assumes /Y automatically when
    running in the batch file or with CALL command
    (or COMMAND /C) as in real DOS. (Wengier)
  - Normal core: REP MOVSD now checks segment limits
    for ES:(E)DI and throws a GP fault if exceeded.
    Demoscene productions marked as using VESA BIOS
    modes and scribbling on the VGA BIOS are relying
    on segment limits and GP faults to fake a linear
    framebuffer.
  - Added config option "vesa bank switching window